# lcc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
debug/: 0.hello_world.debug.ll  0.hello_world.debug.post.ll  0.hello_world.debug.pre.ll  0.hello_world.dot  0.hello_world.ll  0.hello_world.release.ll  0.hello_world.release.post.ll  0.hello_world.release.pre.ll  0.hello_world.release.s  0.hello_world.relwithdebinfo.ll  0.hello_world.relwithdebinfo.s  1.builtin_types.debug.ll  1.builtin_types.debug.post.ll  1.builtin_types.debug.pre.ll  1.builtin_types.dot  1.builtin_types.ll  1.builtin_types.release.ll  1.builtin_types.release.post.ll  1.builtin_types.release.pre.ll  1.builtin_types.release.s  1.builtin_types.relwithdebinfo.ll  1.builtin_types.relwithdebinfo.s  10.double_pointer_type.debug.ll  10.double_pointer_type.debug.post.ll  10.double_pointer_type.debug.pre.ll  10.double_pointer_type.dot  10.double_pointer_type.ll  10.double_pointer_type.release.ll  10.double_pointer_type.release.post.ll  10.double_pointer_type.release.pre.ll  10.double_pointer_type.release.s  10.double_pointer_type.relwithdebinfo.ll  10.double_pointer_type.relwithdebinfo.s  11.type_cast.debug.ll  11.type_cast.debug.post.ll  11.type_cast.debug.pre.ll  11.type_cast.dot  11.type_cast.ll  11.type_cast.release.ll  11.type_cast.release.post.ll  (+396 more)
docs/: Conflicts.md  Development.md  Install.md  Language.md  LearningPlan.md  MiddleBackendRoadmap.md  Pipeline.md  README.md  Roadmap.md  Testing.md  Usage.md
scripts/: build-env.sh  build-lcc.sh  check-debug-info.sh  compile-tests.sh  install-deps-ubuntu.sh  link-tests.sh  run-tests.sh  tests-compile-link-run.sh
src/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  CodeGenerator.cpp  CodeGenerator.hpp  DebugInfoBuilder.cpp  DebugInfoBuilder.hpp  IrOptimizer.cpp  IrOptimizer.hpp  Lexer.cpp  Lexer.l  Parser.counterexamples  Parser.cpp  Parser.hpp  Parser.output  Parser.y  TargetBackend.cpp  TargetBackend.hpp  Types.hpp  Utils.cpp  Utils.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
src/passes/: IrInstructionStatsPass.cpp  IrInstructionStatsPass.hpp
tests/: 0.hello_world.c  1.builtin_types.c  10.double_pointer_type.c  11.type_cast.c  12.arithmetic.c  13.double_inc_sub.c  14.bitwise.c  15.logic.c  16.ternary.c  17.if_else.c  18.switch_case.c  19.for_loop.c  2.struct_type.c  20.do_while.c  21.continue.c  22.break.c  23.return.c  24.struct_array.c  25.quick_sort.c  26.operator_precedence.c  27.parenthesis_change_precedence.c  28.pointer_move.c  29.struct_pointer_move.c  3.union_type.c  30.array_mixed_decl.c  31.array_1d_brace_init.c  32.array_1d_inferred_string_init.c  33.array_2d_decl.c  34.array_2d_brace_init.c  35.typedef_builtin.c  36.typedef_struct.c  37.static_file.c  38.static_local.c  39.break_continue_hierarchy.c  4.enum_type.c  5.pointer_type.c  6.array_type.c  7.variable_list.c  8.function.c  9.sizeof.c
